--- a/components/lwip/Kconfig
+++ b/components/lwip/Kconfig
@@ -594,6 +594,13 @@ menu "LWIP"
 
             PPP over serial support is experimental and unsupported.
 
+    config LWIP_PPP_SERVER
+        bool "Enable PPP server support (new/experimental)"
+        depends on LWIP_PPP_SUPPORT
+        default n
+        help
+            Enable PPP server. Only PPP server over serial is possible.
+
     config LWIP_PPP_ENABLE_IPV6
         bool "Enable IPV6 support for PPP connections (IPV6CP)"
         depends on LWIP_PPP_SUPPORT
